--- a/JavaScript Fundamentals/.vscode/launch.json
+++ b/JavaScript Fundamentals/.vscode/launch.json
@@ -12,7 +12,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\loops.js"
+            "program": "${workspaceFolder}\\fetch.js"
         }
     ]
 }
