--- a/JavaScript Fundamentals/package.json
+++ b/JavaScript Fundamentals/package.json
@@ -3,9 +3,12 @@
     "type" : "module",
     "version": "1.0.0",
     "description": "",
-    "main": "strings.js",
+    "main": "sample_demo.js",
     "scripts": {
         "test": "echo \"Error: no test specified \" && exit 1"
     },
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "prompt-sync": "^4.2.0"
+      }
 }
