--- a/JavaScript Fundamentals/package.json
+++ b/JavaScript Fundamentals/package.json
@@ -1,6 +1,6 @@
 {
     "name": "javascript_fundamentals",
-    "type" : "module",
+    "type": "module",
     "version": "1.0.0",
     "description": "",
     "main": "sample_demo.js",
@@ -9,6 +9,7 @@
     },
     "license": "ISC",
     "dependencies": {
+        "chalk": "^5.3.0",
         "prompt-sync": "^4.2.0"
-      }
+    }
 }
