--- a/JavaScript Fundamentals/package.json
+++ b/JavaScript Fundamentals/package.json
@@ -10,6 +10,8 @@
     "license": "ISC",
     "dependencies": {
         "chalk": "^5.3.0",
-        "prompt-sync": "^4.2.0"
+        "prompt-sync": "^4.2.0",
+        "sqlite": "^5.0.1",
+        "sqlite3": "^5.1.6"
     }
 }
